force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/clofor_com_cfs__Cargo_Delivery__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_CargoDeliveryOnlineHelp</customHelpPage>
    <description>Cargo Delivery</description>
    <label>配送</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Cargo Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>