force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__AddressForAccept__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AddressForAccept__c</fullName>
    <label>Pickup Address</label>
    <type>TextArea</type>
</CustomField>