force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__BLNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BLNumber__c</fullName>
    <formula>IF ( ISNULL(clofor_com_cfs__HBL_SHIPMENT__r.clofor_com_cfs__HBL__c) || ISBLANK(clofor_com_cfs__HBL_SHIPMENT__r.clofor_com_cfs__HBL__c) , clofor_com_cfs__HBL_SHIPMENT__r.clofor_com_cfs__HAWB__c , clofor_com_cfs__HBL_SHIPMENT__r.clofor_com_cfs__HBL__c)</formula>
    <label>B/L Number</label>
    <type>Text</type>
</CustomField>