force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__Chassis__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Chassis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chassis</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__TruckFleet__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Full Container Chassis</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>TRANSPORT (CHASSIS)</relationshipLabel>
    <relationshipName>Chassis</relationshipName>
    <type>Lookup</type>
</CustomField>