force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__CPNumberOfTheDriver__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CPNumberOfTheDriver__c</fullName>
    <label>DRIVER CONTACT NUMBERS</label>
    <type>TextArea</type>
</CustomField>