force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__Customer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Customer__c</fullName>
    <formula>clofor_com_cfs__HBL_SHIPMENT__r.clofor_com_cfs__Field1__r.Name</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>