force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__DelayStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DelayStatus__c</fullName>
    <label>Delay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DelayStatus</valueSetName>
    </valueSet>
</CustomField>