force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__DeliveryCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCKING COMPANY</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cargo_Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>