force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__DeliveryPhone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryPhone__c</fullName>
    <label>TEL of Delivery Destination</label>
    <type>TextArea</type>
</CustomField>