force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drayage</fullName>
            </value>
            <value>
                <fullName>Consolidation Truck</fullName>
            </value>
            <value>
                <fullName>Charter Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>