force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__DEMDETCombined__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DEMDETCombined__c</fullName>
    <label>DEM &amp; DET COMBINED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DECDETCombined</valueSetName>
    </valueSet>
</CustomField>