force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__Driver__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>clofor_com_cfs__WORKER__c</referenceTo>
    <relationshipLabel>TRANSPORT</relationshipLabel>
    <relationshipName>TRANSPORT</relationshipName>
    <type>Lookup</type>
</CustomField>