force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__EmptyDeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmptyDeliveryTime__c</fullName>
    <label>EMPTY DELIVERY TIME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__T24HoursPer30Mins</valueSetName>
    </valueSet>
</CustomField>