force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__EmptyPickupDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmptyPickupDate__c</fullName>
    <label>EMPTY PICKUP DATE</label>
    <type>Date</type>
</CustomField>