force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__EmptyPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmptyPickupLocation__c</fullName>
    <label>EMPTY PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>