force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__EmptyReleaseReferenceNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmptyReleaseReferenceNo__c</fullName>
    <label>EMPTY RELEASE REFERENCE NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>