force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__FreeDetentionDays__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FreeDetentionDays__c</fullName>
    <label>FREE DETENTION DAYS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>