force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__HBL_SHIPMENT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBL_SHIPMENT__c</fullName>
    <label>H B/L-SHIPMENT</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipName>Cargo_Delivery</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>