force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__NumberPlateOfTheTruck__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberPlateOfTheTruck__c</fullName>
    <label>Truck Plate</label>
    <type>TextArea</type>
</CustomField>