force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__OUR_TRUCK_FLEET__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OUR_TRUCK_FLEET__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OUR TRUCK &amp; FLEET</label>
    <type>Checkbox</type>
</CustomField>