force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__PICEmptyDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICEmptyDeliveryDestination__c</fullName>
    <label>P.I.C OF EMPTY DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>