force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__Pickupdate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Pickupdate__c</fullName>
    <inlineHelpText>Pickup Date must be earlier than Delivery Date.</inlineHelpText>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>