force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__Receiver__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Receiver__c</fullName>
    <label>Pickup From</label>
    <type>TextArea</type>
</CustomField>