force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__ReceiverContact__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiverContact__c</fullName>
    <label>TEL OF PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>