force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__ReceiverRep__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiverRep__c</fullName>
    <label>PIC of Delivery Destination</label>
    <type>TextArea</type>
</CustomField>