force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__TelOfEmptyDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TelOfEmptyDeliveryDestination__c</fullName>
    <label>TEL OF EMPTY DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>