force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__TransportStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransportStatus__c</fullName>
    <label>Transport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TransportStatus</valueSetName>
    </valueSet>
</CustomField>