force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/clofor_com_cfs__Truck__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>TRANSPORT(TRUCK)</relationshipLabel>
    <relationshipName>Transport</relationshipName>
    <type>Lookup</type>
</CustomField>