force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/CompletedunloadDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedunloadDate__c</fullName>
    <label>Completed unload Date</label>
    <type>Date</type>
</CustomField>