force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/fields/OutFtyDate__c.field-meta.xml
<CustomField>
    <fullName>OutFtyDate__c</fullName>
    <label>Out Fty Date</label>
    <type>Date</type>
</CustomField>