force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/recordTypes/clofor_com_cfs__Charter_Truck_Export.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Charter_Truck_Export</fullName>
    <active>true</active>
    <description>Arrange exclusive use of a vehicle for Outbound cargo</description>
    <label>Charter Truck-Outbound</label>
</RecordType>