force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/recordTypes/clofor_com_cfs__Charter_Truck_Import.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Charter_Truck_Import</fullName>
    <active>true</active>
    <description>Arrange exclusive use of a vehicle for Inbound cargo</description>
    <label>Charter Truck-Inbound</label>
</RecordType>