force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/recordTypes/clofor_com_cfs__Consolidation_Truck_Export.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Consolidation_Truck_Export</fullName>
    <active>false</active>
    <description>Arrange a truck combine several individual cargo to make up a full for outbound cargo</description>
    <label>Consolidation Truck-Outbound</label>
</RecordType>