force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/recordTypes/clofor_com_cfs__Drayage_Import.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Drayage_Import</fullName>
    <active>true</active>
    <description>Arrange a Full Container Truck for an inbound full container</description>
    <label>Full Container Truck-Inbound</label>
</RecordType>