force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/validationRules/clofor_com_cfs__PICKUP_DATE_BEFORE_DELIVERY_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__PICKUP_DATE_BEFORE_DELIVERY_DATE</fullName>
    <active>false</active>
    <description>The PICKUP DATE must be ealier the DELIVERY DATE</description>
    <errorConditionFormula>clofor_com_cfs__DeliveryDate__c  &gt;=  clofor_com_cfs__Pickupdate__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Pickupdate__c</errorDisplayField>
    <errorMessage>The PICKUP DATE must be earlier than the DELIVERY DATE</errorMessage>
</ValidationRule>