force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/listViews/clofor_com_cfs__All_test_mass_delete.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All_test_mass_delete</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>clofor_com_cfs__CONTAINER_ID__c</columns>
    <columns>clofor_com_cfs__DeliveryType__c</columns>
    <columns>clofor_com_cfs__DeliveryDate__c</columns>
    <columns>clofor_com_cfs__Pickupdate__c</columns>
    <columns>clofor_com_cfs__Destination__c</columns>
    <columns>clofor_com_cfs__Receiver__c</columns>
    <columns>clofor_com_cfs__DeliveryCompanyType__c</columns>
    <columns>clofor_com_cfs__DeliveryCompany__c</columns>
    <columns>clofor_com_cfs__transporter_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__Cargo_Delivery__c.clofor_com_cfs__Drayage_Export</value>
    </filters>
    <label>All-test mass delete</label>
    <language>en_US</language>
</ListView>