force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/listViews/clofor_com_cfs__FORWARDING_ID_Seach.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__FORWARDING_ID_Seach</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__CONTAINER_ID__c</columns>
    <columns>clofor_com_cfs__Pickupdate__c</columns>
    <columns>clofor_com_cfs__EXPECTED_PICKUP_TIME__c</columns>
    <columns>clofor_com_cfs__DeliveryTime__c</columns>
    <columns>clofor_com_cfs__DeliveryDate__c</columns>
    <columns>clofor_com_cfs__Receiver__c</columns>
    <columns>clofor_com_cfs__AddressForAccept__c</columns>
    <columns>clofor_com_cfs__Destination__c</columns>
    <columns>clofor_com_cfs__Destinationaddress__c</columns>
    <columns>clofor_com_cfs__NameOfTheDriver__c</columns>
    <columns>clofor_com_cfs__CPNumberOfTheDriver__c</columns>
    <columns>clofor_com_cfs__DeliveryNote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__HBL_SHIPMENT__c</field>
        <operation>equals</operation>
    </filters>
    <label>FORWARDING ID Seach</label>
    <language>en_US</language>
</ListView>