force-app/main/default/objects/clofor_com_cfs__Cargo_Delivery__c/listViews/clofor_com_cfs__Mass_Update_Charter_Truck_Import.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Mass_Update_Charter_Truck_Import</fullName>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__CONTAINER_ID__c</columns>
    <columns>clofor_com_cfs__Pickupdate__c</columns>
    <columns>clofor_com_cfs__EXPECTED_PICKUP_TIME__c</columns>
    <columns>clofor_com_cfs__Receiver__c</columns>
    <columns>clofor_com_cfs__AddressForAccept__c</columns>
    <columns>clofor_com_cfs__DeliveryDate__c</columns>
    <columns>clofor_com_cfs__DeliveryTime__c</columns>
    <columns>clofor_com_cfs__Destination__c</columns>
    <columns>clofor_com_cfs__Destinationaddress__c</columns>
    <columns>clofor_com_cfs__NameOfTheDriver__c</columns>
    <columns>clofor_com_cfs__CPNumberOfTheDriver__c</columns>
    <columns>clofor_com_cfs__DeliveryNote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__Cargo_Delivery__c.clofor_com_cfs__Charter_Truck_Import</value>
    </filters>
    <label>Mass Update-Charter Truck Import</label>
    <language>en_US</language>
</ListView>